discussion/kv_engine/153754/153754_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP magma: Add support for group commit

Add new config parameter magma_group_commit_quota.
Units are bytes.
I suggest 131072 (128KB).

Change-Id: I5f3c480b0e4787c8b2bbae79ade2c3db87f805fe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-17 23:38:07.000000000
Message: 
Uploaded patch set 3: New patch set was added with same tree, parent, and commit message as Patch Set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-17 23:44:59.000000000
Message: 
Patch Set 3:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8980/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28: error: no member named "GroupCommitQuota" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.GroupCommitQuota =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8980/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8980/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35834/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(470): error C2039: "GroupCommitQuota": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35834/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30635/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30635/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10674/ : FAILURE

Compile error at [2021-05-17T23:41:31.179Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: ?struct magma::Magma::Config? has no member named ?GroupCommitQuota?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10933/ : FAILURE

Compile error at [2021-05-17T23:39:46.572Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10933/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9602/ : FAILURE

Compile error at [2021-05-17T23:39:16.532Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9602/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18484/ : FAILURE

Compile error at [2021-05-17T23:40:46.031Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7532/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10533/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-05-19 04:13:32.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
